<resources>
    <string name="app_name">DeliveryTracker</string>
    <string name="orders">Orders</string>
    <string name="highlights">Highlights</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_number">Order Number</string>
    <string name="customer_name">Customer Name</string>
    <string name="cost">Cost</string>
    <string name="address">Address</string>
    <string name="deliver_to">Deliver To</string>
    <string name="item_condition">   Item Condition</string>
    <string name="final_amount">Final Amount</string>
    <string name="order_details">Order Details</string>
    <string name="submit_delivery">Submit Delivery</string>
    <string name="item_photo">Item Photo</string>
    <string name="perfect">Perfect</string>
    <string name="damaged">Damaged</string>
</resources>