<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.orderDetails.OrderDetailsActivity">

    <include
        android:id="@+id/ordersToolbar"
        layout="@layout/toolbar_main"/>

    <ScrollView
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/ordersToolbar"
        app:layout_constraintBottom_toTopOf="@id/btnSubmit"
        android:layout_height="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:paddingBottom="20dp"
            android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvOrderNoLbl"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/poppins"
        android:textSize="12sp"
        android:text="@string/order_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvOrderNo"
        app:layout_constraintTop_toBottomOf="@id/tvOrderNoLbl"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/poppins_medium"
        android:textSize="14sp"
        tools:text="474658"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvCustNameLbl"
        app:layout_constraintTop_toBottomOf="@id/tvOrderNo"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/poppins"
        android:layout_marginTop="16dp"
        android:textSize="12sp"
        android:text="@string/customer_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvCustName"
        app:layout_constraintTop_toBottomOf="@id/tvCustNameLbl"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/poppins_medium"
        android:textSize="14sp"
        tools:text="Jacob Hilfiger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvPriceLbl"
        app:layout_constraintTop_toBottomOf="@id/tvCustName"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/poppins"
        android:textSize="12sp"
        android:layout_marginTop="16dp"
        android:text="@string/cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvPrice"
        app:layout_constraintTop_toBottomOf="@id/tvPriceLbl"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/poppins_medium"
        android:textSize="14sp"
        tools:text="450/-"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvAddressLbl"
        app:layout_constraintTop_toBottomOf="@id/tvPrice"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/poppins"
        android:textSize="12sp"
        android:layout_marginTop="16dp"
        android:text="@string/deliver_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvRoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="0.5dp"
        android:layout_marginVertical="5dp"
        app:layout_constraintTop_toBottomOf="@id/tvAddressLbl"
        app:cardCornerRadius="10dp"
        android:layout_marginHorizontal="12dp"
        app:strokeWidth="0.5dp"
        app:strokeColor="#E2E8F0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:paddingHorizontal="15dp"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:gravity="start"
                android:textColor="@color/text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="asjldnfajkl aljsfnal;fjn ;alsdnfajfn" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvProductCondition"
        app:layout_constraintTop_toBottomOf="@id/cvRoot"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="18dp"
        android:fontFamily="@font/poppins"
        android:textSize="12sp"
        android:layout_marginTop="16dp"
        android:text="@string/item_condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:id="@+id/rgGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvProductCondition"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent">
        <RadioButton
            android:id="@+id/rbDamaged"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/damaged"/>
        <RadioButton
            android:id="@+id/rbPerfect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/perfect"/>
    </RadioGroup>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvFinalAmount"
        app:layout_constraintTop_toBottomOf="@id/rgGroup"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="18dp"
        android:fontFamily="@font/poppins"
        android:textSize="12sp"
        android:layout_marginTop="16dp"
        android:text="@string/final_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etFinalAmount"
        app:layout_constraintTop_toBottomOf="@id/tvFinalAmount"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="18dp"
        android:layout_width="match_parent"
        android:textSize="14sp"
        android:inputType="numberDecimal"
        android:hint="@string/final_amount"
        android:layout_marginTop="4dp"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupFinalAmt"
        android:layout_width="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        app:constraint_referenced_ids="etFinalAmount,tvFinalAmount"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvItemPhoto"
        app:layout_constraintTop_toBottomOf="@id/etFinalAmount"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="@font/poppins"
        android:textSize="12sp"
        android:layout_marginTop="16dp"
        android:text="@string/item_photo"
        android:layout_width="match_parent"
        android:paddingBottom="14dp"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/ivAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_add_photo"
        app:layout_constraintTop_toTopOf="@id/tvItemPhoto"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="@id/tvItemPhoto"
        />

    <ImageView
        android:id="@+id/ivItem"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/tvItemPhoto"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:rotation="180"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="240dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSubmit"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:text="@string/submit_delivery"
        android:fontFamily="@font/poppins"
        android:paddingVertical="12dp"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>